# eevset

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.tmpl  README.md  eevset.sln
.github/workflows/: ccpp.yml
src/: eevset.cpp  eevset.vcxproj  eevset.vcxproj.filters
src/arguments/: ArgumentInfo.h  Arguments.cpp  Arguments.h
src/settings/: Settings.cpp  Settings.h
src/utils/: lexical_cast.h
test/: UtilsUnitTests.cpp  test.vcxproj  test.vcxproj.filters  unit_test.cpp
